--- a/flutter_family_wallet/pubspec.yaml
+++ b/flutter_family_wallet/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   supabase_flutter: ^2.0.0
   intl: ^0.19.0  # Für Währungsformatierung
   month_picker_dialog: ^5.1.3 # Monats-Picker 
+  app_links: ^6.3.2   # für Signierung des iOS-Devices
 
 
   # The following adds the Cupertino Icons font to your application.
